--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@pallad/errors": "^1.0.1",
     "@pallad/range": "^3.1.0",
     "@pallad/secret": "^1.1.1",
+    "@sweet-monads/either": "^3.3.1",
     "zod": "^3.22.4"
   }
 }
